--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "react": "^15.3.2",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.1",
+    "react-router": "^4.2.0",
     "redux": "^3.3.1"
   },
   "devDependencies": {
