--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-redux": "^4.4.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
