--- a/.eslintrc
+++ b/.eslintrc
@@ -10,11 +10,13 @@
 
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest/globals": true
   },
 
   "plugins": [
-    "react"
+    "react",
+    "jest"
   ],
 
   "rules": {
@@ -58,6 +60,11 @@
     "react/prefer-es6-class": [2, "always"],
     "react/self-closing-comp": 2,
     "react/sort-comp": 2,
-    "react/wrap-multilines": 2
+    "react/wrap-multilines": 2,
+
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/valid-expect": "error"
   }
 }
