--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "test": "NODE_ENV=test mocha --compilers js:babel-core/register --recursive",
-    "test:watch": "npm test -- --watch --reporter min",
+    "test": "jest --coverage --config=jest.config.json",
+    "test:watch": "npm test -- --watch",
     "lint": "eslint src --ext .js,.jsx"
   },
   "dependencies": {
@@ -11,11 +11,15 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.1",
     "react-router": "^4.2.0",
-    "redux": "^3.3.1"
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.3.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
     "babel-eslint": "^7.0.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.7.4",
@@ -23,14 +27,21 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.1",
     "eslint": "^3.8.1",
+    "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-react": "^6.4.1",
     "express": "^4.13.4",
-    "mocha": "^3.1.2",
+    "jest": "^21.2.1",
+    "jest-enzyme": "^4.0.0",
+    "mocha": "^3.5.3",
     "react-addons-test-utils": "^15.3.2",
+    "react-test-renderer": "^15.6.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
+    "redux-mock-store": "^1.3.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
